add username runner for CI

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,8 +1,8 @@
 ---
-#home_path: /home/runner/work
-#username: runner
-home_path: /home/ubuntu
-username: ubuntu
+home_path: /home/runner/work
+username: runner
+# home_path: /home/ubuntu
+# username: ubuntu
 miniforge_version: 23.11.0-0
 minimap2_version: 2.26
 snakemake_version: 8.2.0
