--- a/tests/test.yml
+++ b/tests/test.yml
@@ -13,6 +13,9 @@
     - name: Debug pwd path
       debug:
         msg: "{{ directory.stdout }}"
+    - name: Debug username vars 
+      debug:
+        msg: "{{ username }}"
     - name: Installing role kirgenotyping
       include_tasks: "../tasks/main.yml"
     - name: Check Mamba installation
@@ -24,17 +27,24 @@
       register: conda_help
       failed_when: conda_help.stderr != ''
     - name: Check Snakemake installation
+      command: "which snakemake"
+      register: snakemake_which
+      failed_when: snakemake_which.stderr != ''
+    - name: Debug snakemake_which 
+      debug:
+        msg: "{{ snakemake_which }}"
+    - name: Check Snakemake installation
       command: "snakemake --help"
       register: snakemake_help
       failed_when: snakemake_help.stderr != ''
     - name: Check samtools installation
       command: "samtools --help"
       register: samtools_help
-      failed_when: samtools_help.stdout != ''
+      failed_when: samtools_help.stderr != ''
     - name: Check minimap2 installation
       command: "minimap2 --help"
       register: minimap2_help
-      failed_when: minimap2_help.stdout != ''
+      failed_when: minimap2_help.stderr != ''
     - name: Check jellyfish installation
       command: "jellyfish --help"
       register: jellyfish_help
