--- a/vars/main.yml
+++ b/vars/main.yml
@@ -5,4 +5,4 @@ home_path: /home/ubuntu
 username: ubuntu
 miniforge_version: 23.11.0-0
 minimap2_version: 2.26
-snakemake_version: 8.2.0
+snakemake_version: 7.30.0 # pip only contains up to version 7.32.4, so not 8.*
